--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <html>
 
 <body>
-No<b>Black</b>Boxes
+<img src="images/logo/noblackbixes_logo_darktext.png" alt="No Black Boxes Logo">
 </body>
 
 </html>
