--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <head>
+    <title>NoBlackBoxes</title>
+    <link rel="stylesheet" href="style.css"/>
     <link rel="apple-touch-icon" sizes="180x180" href="/images/icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/images/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/images/icons/favicon-16x16.png">
@@ -14,7 +16,7 @@
 <html>
 
 <body>
-<img src="images/logo/noblackbixes_logo_darktext.png" alt="No Black Boxes Logo">
+<img id="logo" src="images/logo/noblackboxes_logo_darktext.png" alt="No Black Boxes Logo">
 </body>
 
 </html>
