--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <html>
 
 <body>
-    <img id="logo" src="images/logos/noblackboxes_logo_darktext.png" alt="No Black Boxes Logo">
+    <img class="logo" src="images/logos/noblackboxes_logo_darktext.png" alt="No Black Boxes Logo">
 </body>
 
 </html>
