--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <body>
     <img class="logo" src="images/logos/noblackboxes_logo_darktext.png" alt="No Black Boxes Logo">
+    <embed src="images/svgs/noblackboxes_icon.svg"/>
 </body>
 
 </html>
